like so, exactly