@@ -24,17 +24,26 @@ import net.minecraft.world.item.ItemDisplayContext;
 import net.minecraft.world.item.ItemStack;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.Base64;
-import java.util.HashMap;
 import java.util.Map;
-import java.util.Scanner;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.Executor;
+import java.util.concurrent.Executors;
 
 public class TotemItemRenderer extends BlockEntityWithoutLevelRenderer {
     private static final Gson GSON = new Gson();
-    private final Map<String, CompletableFuture<ResourceLocation>> skinFutures = new HashMap<>();
-    private final Map<String, Boolean> slimModelCache = new HashMap<>();
+    private static final HttpClient HTTP_CLIENT = HttpClient.newBuilder().executor(Executors.newFixedThreadPool(2)).build();
+    private static final Executor ASYNC_EXECUTOR = Executors.newFixedThreadPool(2);
+
+    private final Map<String, String> uuidCache = new ConcurrentHashMap<>();
+    private final Map<String, ResourceLocation> skinCache = new ConcurrentHashMap<>();
+    private final Map<String, Boolean> slimModelCache = new ConcurrentHashMap<>();
+    private final Map<String, CompletableFuture<Void>> loadingFutures = new ConcurrentHashMap<>();
 
     private PlayerModel<AbstractClientPlayer> playerModel;
     private PlayerModel<AbstractClientPlayer> slimPlayerModel;
@@ -54,63 +63,117 @@ public class TotemItemRenderer extends BlockEntityWithoutLevelRenderer {
         }
     }
 
-    private CompletableFuture<String> fetchUUIDAsync(String username) {
-        return CompletableFuture.supplyAsync(() -> {
-            try {
-                String uuidUrl = String.format("https://api.mojang.com/users/profiles/minecraft/%s", username);
-                String response = new Scanner(new URL(uuidUrl).openStream()).useDelimiter("\\A").next();
-                MojangUUIDResponse uuidData = GSON.fromJson(response, MojangUUIDResponse.class);
-                return uuidData.id;
-            } catch (IOException e) {
-                e.printStackTrace();
-                return null;
-            }
-        });
+    private CompletableFuture<String> fetchUUIDFromAPI(String username) {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(String.format("https://api.mojang.com/users/profiles/minecraft/%s", username)))
+                .GET()
+                .build();
+
+        return HTTP_CLIENT.sendAsync(request, HttpResponse.BodyHandlers.ofString())
+                .thenApply(HttpResponse::body)
+                .thenApply(response -> {
+                    MojangUUIDResponse uuidData = GSON.fromJson(response, MojangUUIDResponse.class);
+                    return uuidData != null ? uuidData.id : null;
+                })
+                .exceptionally(e -> {
+                    e.printStackTrace();
+                    return null;
+                });
     }
 
-    private CompletableFuture<ResourceLocation> fetchSkinAsync(String username) {
-        return fetchUUIDAsync(username).thenCompose(uuid -> {
-            if (uuid == null || uuid.isEmpty()) {
-                return CompletableFuture.completedFuture(Minecraft.getInstance().player.getSkin().texture());
-            }
+    private void loadSkinForName(String username) {
+        if (skinCache.containsKey(username) || loadingFutures.containsKey(username)) {
+            return;
+        }
 
-            return CompletableFuture.supplyAsync(() -> {
-                try {
-                    String profileUrl = String.format("https://sessionserver.mojang.com/session/minecraft/profile/%s", uuid);
-                    String profileResponse = new Scanner(new URL(profileUrl).openStream()).useDelimiter("\\A").next();
-                    MojangProfileResponse profileData = GSON.fromJson(profileResponse, MojangProfileResponse.class);
+        CompletableFuture<Void> loadingFuture = CompletableFuture.supplyAsync(() ->
+                        uuidCache.computeIfAbsent(username, name -> {
+                            try {
+                                return fetchUUIDFromAPI(name).get();
+                            } catch (Exception e) {
+                                e.printStackTrace();
+                                return null;
+                            }
+                        }), ASYNC_EXECUTOR)
+                .thenCompose(uuid -> {
+                    if (uuid == null) {
+                        return CompletableFuture.completedFuture(null);
+                    }
+
+                    HttpRequest request = HttpRequest.newBuilder()
+                            .uri(URI.create(String.format("https://sessionserver.mojang.com/session/minecraft/profile/%s", uuid)))
+                            .GET()
+                            .build();
+
+                    return HTTP_CLIENT.sendAsync(request, HttpResponse.BodyHandlers.ofString())
+                            .thenApply(HttpResponse::body)
+                            .thenApply(response -> GSON.fromJson(response, MojangProfileResponse.class));
+                })
+                .thenCompose(profileData -> {
+                    if (profileData == null) {
+                        return CompletableFuture.completedFuture(null);
+                    }
 
                     String skinUrl = profileData.getSkinURL();
                     boolean isSlimModel = profileData.isSlimModel();
 
-                    if (skinUrl == null || skinUrl.isEmpty()) {
-                        throw new IOException("Skin URL is null or empty");
+                    if (skinUrl == null) {
+                        return CompletableFuture.completedFuture(null);
                     }
 
-                    NativeImage nativeImage;
-                    try (var stream = new URL(skinUrl).openStream()) {
-                        nativeImage = NativeImage.read(stream);
+                    HttpRequest request = HttpRequest.newBuilder()
+                            .uri(URI.create(skinUrl))
+                            .GET()
+                            .build();
+
+                    return HTTP_CLIENT.sendAsync(request, HttpResponse.BodyHandlers.ofByteArray())
+                            .thenApply(response -> {
+                                try {
+                                    NativeImage nativeImage = NativeImage.read(response.body());
+                                    return new SkinData(nativeImage, isSlimModel);
+                                } catch (IOException e) {
+                                    e.printStackTrace();
+                                    return null;
+                                }
+                            });
+                })
+                .thenAccept(skinData -> {
+                    if (skinData == null) {
+                        setDefaultSkin(username);
+                        return;
                     }
 
-                    if (nativeImage == null) {
-                        throw new IOException("Failed to load NativeImage (null result)");
-                    }
-
-                    DynamicTexture texture = new DynamicTexture(nativeImage);
-                    ResourceLocation textureLocation = ResourceLocation.fromNamespaceAndPath("playertotem", "skin_" + username.toLowerCase());
-                    Minecraft.getInstance().execute(() -> Minecraft.getInstance().getTextureManager().register(textureLocation, texture));
-                    slimModelCache.put(username, isSlimModel);
-                    return textureLocation;
-                } catch (Exception e) {
+                    Minecraft.getInstance().execute(() -> {
+                        try {
+                            DynamicTexture texture = new DynamicTexture(skinData.nativeImage);
+                            ResourceLocation textureLocation = ResourceLocation.fromNamespaceAndPath("playertotem", "skin_" + username.toLowerCase());
+                            Minecraft.getInstance().getTextureManager().register(textureLocation, texture);
+                            skinCache.put(username, textureLocation);
+                            slimModelCache.put(username, skinData.isSlimModel);
+                        } catch (Exception e) {
+                            e.printStackTrace();
+                            setDefaultSkin(username);
+                        } finally {
+                            skinData.nativeImage.close();
+                            loadingFutures.remove(username);
+                        }
+                    });
+                })
+                .exceptionally(e -> {
                     e.printStackTrace();
-                    return Minecraft.getInstance().player.getSkin().texture();
-                }
-            });
-        });
+                    setDefaultSkin(username);
+                    loadingFutures.remove(username);
+                    return null;
+                });
+
+        loadingFutures.put(username, loadingFuture);
     }
 
-    private CompletableFuture<ResourceLocation> getSkin(String username) {
-        return skinFutures.computeIfAbsent(username, this::fetchSkinAsync);
+    private void setDefaultSkin(String username) {
+        Minecraft.getInstance().execute(() -> {
+            skinCache.put(username, Minecraft.getInstance().player.getSkin().texture());
+            slimModelCache.put(username, false);
+        });
     }
 
     @Override
@@ -118,75 +181,83 @@ public class TotemItemRenderer extends BlockEntityWithoutLevelRenderer {
                              MultiBufferSource buffer, int combinedLight, int combinedOverlay) {
         initializeModels();
 
-        if (!stack.has(DataComponents.CUSTOM_NAME)) {
-            return;
+        ResourceLocation skinLocation;
+        boolean isSlimModel = false;
+
+        if (stack.has(DataComponents.CUSTOM_NAME)) {
+            String username = stack.get(DataComponents.CUSTOM_NAME).getString();
+            if (!username.isEmpty() && (Minecraft.getInstance().screen == null ||
+                    Minecraft.getInstance().screen instanceof InventoryScreen ||
+                    Minecraft.getInstance().screen instanceof CreativeModeInventoryScreen)) {
+                loadSkinForName(username);
+            }
+            skinLocation = skinCache.getOrDefault(username, Minecraft.getInstance().player.getSkin().texture());
+            isSlimModel = slimModelCache.getOrDefault(username, false);
+        } else {
+            skinLocation = Minecraft.getInstance().player.getSkin().texture();
         }
 
-        String username = stack.get(DataComponents.CUSTOM_NAME).getString();
-        if (username.isEmpty()) {
-            return;
+        PlayerModel<AbstractClientPlayer> modelToUse = isSlimModel ? slimPlayerModel : playerModel;
+
+        poseStack.pushPose();
+        switch (displayContext) {
+            case THIRD_PERSON_RIGHT_HAND -> {
+                poseStack.mulPose(Axis.XP.rotationDegrees(180f));
+                poseStack.translate(0.5, -0.6, -0.5);
+                poseStack.mulPose(Axis.YP.rotationDegrees(90f));
+                poseStack.scale(0.3F, 0.3F, 0.3F);
+            }
+            case THIRD_PERSON_LEFT_HAND -> {
+                poseStack.mulPose(Axis.XP.rotationDegrees(180f));
+                poseStack.translate(0.5, -0.6, -0.5);
+                poseStack.mulPose(Axis.YP.rotationDegrees(270f));
+                poseStack.scale(0.3F, 0.3F, 0.3F);
+            }
+            case FIRST_PERSON_RIGHT_HAND -> {
+                poseStack.mulPose(Axis.XP.rotationDegrees(180f));
+                poseStack.translate(0.60, -0.80, -0.45);
+                poseStack.mulPose(Axis.YP.rotationDegrees(70f));
+                poseStack.scale(0.3F, 0.3F, 0.3F);
+            }
+            case FIRST_PERSON_LEFT_HAND -> {
+                poseStack.mulPose(Axis.XP.rotationDegrees(180f));
+                poseStack.translate(0.3, -0.80, -0.45);
+                poseStack.mulPose(Axis.YP.rotationDegrees(280f));
+                poseStack.scale(0.3F, 0.3F, 0.3F);
+            }
+            case GROUND -> {
+                poseStack.mulPose(Axis.XP.rotationDegrees(180f));
+                poseStack.translate(0.5, -0.55, -0.5);
+                poseStack.scale(0.19F, 0.2F, 0.2F);
+            }
+            case GUI -> {
+                poseStack.translate(0.5D, 0.75D, 0D);
+                poseStack.mulPose(Axis.XP.rotationDegrees(-180f));
+                poseStack.scale(0.5F, 0.5F, 0.49F);
+            }
+            case FIXED -> {
+                poseStack.mulPose(Axis.XP.rotationDegrees(180f));
+                poseStack.translate(0.5, -0.7, -0.5);
+                poseStack.mulPose(Axis.YP.rotationDegrees(180f));
+                poseStack.scale(0.5F, 0.5F, 0.5F);
+            }
         }
 
-        getSkin(username).thenAccept(skinLocation -> {
-            PlayerModel<AbstractClientPlayer> modelToUse = slimModelCache.getOrDefault(username, false) ? slimPlayerModel : playerModel;
+        VertexConsumer vertexConsumer = buffer.getBuffer(RenderType.entityTranslucent(skinLocation));
+        modelToUse.setAllVisible(true);
+        modelToUse.young = false;
 
-            poseStack.pushPose();
-            switch (displayContext) {
-                case THIRD_PERSON_RIGHT_HAND -> {
-                    poseStack.mulPose(Axis.XP.rotationDegrees(180f));
-                    poseStack.translate(0.5, -0.6, -0.5);
-                    poseStack.mulPose(Axis.YP.rotationDegrees(90f));
-                    poseStack.scale(0.3F, 0.3F, 0.3F);
-                }
-                case THIRD_PERSON_LEFT_HAND -> {
-                    poseStack.mulPose(Axis.XP.rotationDegrees(180f));
-                    poseStack.translate(0.5, -0.6, -0.5);
-                    poseStack.mulPose(Axis.YP.rotationDegrees(270f));
-                    poseStack.scale(0.3F, 0.3F, 0.3F);
-                }
-                case FIRST_PERSON_RIGHT_HAND -> {
-                    poseStack.mulPose(Axis.XP.rotationDegrees(180f));
-                    poseStack.translate(0.60, -0.80, -0.45);
-                    poseStack.mulPose(Axis.YP.rotationDegrees(70f));
-                    poseStack.scale(0.3F, 0.3F, 0.3F);
-                }
-                case FIRST_PERSON_LEFT_HAND -> {
-                    poseStack.mulPose(Axis.XP.rotationDegrees(180f));
-                    poseStack.translate(0.3, -0.80, -0.45);
-                    poseStack.mulPose(Axis.YP.rotationDegrees(280f));
-                    poseStack.scale(0.3F, 0.3F, 0.3F);
-                }
-                case GROUND -> {
-                    poseStack.mulPose(Axis.XP.rotationDegrees(180f));
-                    poseStack.translate(0.5, -0.55, -0.5);
-                    poseStack.scale(0.19F, 0.2F, 0.2F);
-                }
-                case GUI -> {
-                    poseStack.translate(0.5D, 0.75D, 0D);
-                    poseStack.mulPose(Axis.XP.rotationDegrees(-180f));
-                    poseStack.scale(0.5F, 0.5F, 0.49F);
-                }
-                case FIXED -> {
-                    poseStack.mulPose(Axis.XP.rotationDegrees(180f));
-                    poseStack.translate(0.5, -0.7, -0.5);
-                    poseStack.mulPose(Axis.YP.rotationDegrees(180f));
-                    poseStack.scale(0.5F, 0.5F, 0.5F);
-                }
-            }
+        float tick = Minecraft.getInstance().player.tickCount;
+        if (PTMain.config.canMoveArms()) {
+            modelToUse.setupAnim(Minecraft.getInstance().player, 0, 0, tick, 0, 0);
+        }
+        modelToUse.renderToBuffer(poseStack, vertexConsumer, combinedLight, OverlayTexture.NO_OVERLAY, -1);
 
-            VertexConsumer vertexConsumer = buffer.getBuffer(RenderType.entityTranslucent(skinLocation));
-            modelToUse.setAllVisible(true);
-            modelToUse.young = false;
-
-            float tick = Minecraft.getInstance().player.tickCount;
-            if (PTMain.config.canMoveArms()) {
-                modelToUse.setupAnim(Minecraft.getInstance().player, 0, 0, tick, 0, 0);
-            }
-            modelToUse.renderToBuffer(poseStack, vertexConsumer, combinedLight, OverlayTexture.NO_OVERLAY, -1);
-
-            poseStack.popPose();
-        });
+        poseStack.popPose();
     }
+
+    private record SkinData(NativeImage nativeImage, boolean isSlimModel) {}
+
     private static class MojangProfileResponse {
         String id;
         String name;
